<resources>
    <string name="app_name">Moovies</string>
    <string name="str_title_discover_movie">Popular em Filmes</string>
    <string name="str_title_discover_tv">Popular em Séries</string>
    <string name="str_title_popular_movie">Sucessos em Filmes</string>
    <string name="str_title_popular_tv">Sucessos em Séries</string>
    <string name="str_tittle">Moovies</string>
    <string name="str_title_my_list">Minha Lista</string>
    <string name="str_title_header_my_list">My Moovies</string>
    <string name="hint_search_text_input_layout">Pesquise por filmes ou séries …</string>
    <string name="hint_search_text_input_my_list">Pesquise em sua list …</string>
    <string name="str_detail_label_streaming">Assista</string>
    <string name="str_detail_label_buy">Alugue</string>
    <string name="bt_my_lista">Minha Lista</string>
    <string name="bt_watched">Assistido</string>
    <string name="bt_not_watched">Assistir</string>
    <string name="stre_btn_search">Botão Pesquisar</string>
    <string name="str_app_initial">M</string>
    <string name="str_poster_cover">Poster do filme ou série</string>
    <string name="title_search_noting_found">Nada Encontrado…</string>
    <string name="str_detail_label_videos">Trailer</string>
    <string name="str_detail_label_overview">Overview\n</string>
    <string name="str_detail_label_actor">Elenco</string>
    <string name="banner_ad_unit_id">ca-app-pub-5942000979469254/3861152790</string>
    <string name="str_title_similar">Veja também</string>
</resources>